--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "author": "Maxime Cannoodt (@mcndt)",
   "license": "GPL-3.0",
   "devDependencies": {
+    "@sveltejs/vite-plugin-svelte": "^2.2.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/svelte": "^3.2.2",
     "@tsconfig/svelte": "^2.0.1",
     "@types/d3": "^7.1.0",
     "@types/node": "^14.17.18",
@@ -43,6 +46,7 @@
     "svelte-preprocess": "^4.9.5",
     "tslib": "^2.3.1",
     "typescript": "<4.8.0",
+    "vite-plugin-externals": "^0.6.2",
     "vitest": "^0.22.1"
   },
   "dependencies": {
