--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "isolatedModules": true,
     "lib": ["DOM", "ES5", "ES6", "ES7", "ES2019"]
   },
-  "include": ["**/*.ts", "**/*.svelte"]
+  "include": ["**/*.ts", "**/*.svelte", "vite.config.mts"]
 }
